--- a/portfolio-code/package.json
+++ b/portfolio-code/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gsap": "^3.12.5",
+    "locomotive-scroll": "^4.1.4",
+    "lodash": "^4.17.21",
+    "new-component": "^5.0.2",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "smooth-scrollbar": "^8.8.4"
   },
   "devDependencies": {
     "postcss": "^8",
